meson: build core and plugins

--- a/meson.build
+++ b/meson.build
@@ -6,12 +6,18 @@ r = run_command('git', 'describe', '--abbrev=8', '--dirty', '--always', '--tags'
 version_str = r.stdout().strip()
 
 cmake = import('cmake')
+pkg = import('pkgconfig')
+
+thread_dep = dependency('threads')
 
 if get_option('build_deps')
   jsoncpp = subproject('jsoncpp')
+  jsoncpp_dep = jsoncpp.get_variable('jsoncpp_dep')
   tinyxml2 = subproject('tinyxml2')
+  tinyxml2_dep = tinyxml2.get_variable('tinyxml2_dep')
   zlib = subproject('zlib')
-  curl = cmake.subproject('curl')
+  #curl = cmake.subproject('curl')
+  curl = dependency('libcurl')
   libressl = cmake.subproject('libressl')
   cares = cmake.subproject('cares')
   protobuf = subproject('protobuf')
