--- a/src/meson.build
+++ b/src/meson.build
@@ -9,5 +9,7 @@ cmake = import('cmake')
   #tinyxml2.dependency('tinyxml2')
 #]
 mavlink_include = include_directories('third_party/mavlink/include')
+core_include = include_directories('core')
 
 subdir('core')
+subdir('plugins')
