meson: update package configs for plugins

--- a/examples/takeoff_land/CMakeLists.txt
+++ b/examples/takeoff_land/CMakeLists.txt
@@ -10,6 +10,11 @@ endif()
 
 find_package(MAVSDK REQUIRED)
 
+# for meson:
+#find_library(MAVSDK NAMES libmavsdk)
+#find_library(MAVSDK_ACTION NAMES libmavsdk_action)
+#find_library(MAVSDK_TELEMETRY NAMES libmavsdk_telemetry)
+
 add_executable(takeoff_and_land
     takeoff_and_land.cpp
 )
@@ -18,4 +23,8 @@ target_link_libraries(takeoff_and_land
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk
+    # for meson:
+    #MAVSDK
+    #MAVSDK_ACTION
+    #MAVSDK_TELEMETRY
 )
