--- a/meson.build
+++ b/meson.build
@@ -16,8 +16,7 @@ if get_option('build_deps')
   tinyxml2 = subproject('tinyxml2')
   tinyxml2_dep = tinyxml2.get_variable('tinyxml2_dep')
   zlib = subproject('zlib')
-  #curl = cmake.subproject('curl')
-  curl = dependency('libcurl')
+  curl_dep = dependency('libcurl')
   libressl = cmake.subproject('libressl')
   cares = cmake.subproject('cares')
   protobuf = subproject('protobuf')
