--- a/src/plugins/calibration/meson.build
+++ b/src/plugins/calibration/meson.build
@@ -1,4 +1,4 @@
-calibration_include = include_directories('include')
+calibration_include = include_directories(['include'])
 
 # TODO: target properties
 calibration = shared_library('mavsdk_calibration',
@@ -8,4 +8,13 @@ calibration = shared_library('mavsdk_calibration',
   install: true
 )
 
-install_headers('include/plugins/calibration/calibration.h')
+pkg.generate(
+  libraries: [calibration],
+  subdirs: ['mavsdk/plugins/calibration', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_calibration',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/calibration/calibration.h',
+  subdir: 'mavsdk/plugins/calibration')
