--- a/src/plugins/camera/meson.build
+++ b/src/plugins/camera/meson.build
@@ -1,19 +1,26 @@
-camera_include = include_directories('include')
-definition_include = include_directories('camera_definition_files/generated')
+camera_include = include_directories(['include', 'camera_definition_files/generated'])
 
 # TODO: target properties
 camera = shared_library('mavsdk_camera',
   [
-    'camera.cpp', 
+    'camera.cpp',
     'camera_impl.cpp',
     'camera_definition.cpp',
-    'camera_definition_files/generated/camera_definition_files.cpp',
-    ],
-  include_directories: [core_include, mavlink_include, camera_include, definition_include],
-  #link_with: [mavsdk_lib, tinyxml2, curl],
+    'camera_definition_files/generated/camera_definition_files.cpp'
+  ],
+  include_directories: [core_include, mavlink_include, camera_include],
   link_with: mavsdk_lib,
-  dependencies: tinyxml2_dep,
+  dependencies: [tinyxml2_dep, curl_dep],
   install: true
 )
 
-install_headers('include/plugins/camera/camera.h')
+pkg.generate(
+  libraries: [camera],
+  subdirs: ['mavsdk/plugins/camera', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_camera',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/camera/camera.h',
+  subdir: 'mavsdk/plugins/camera')
