--- a/src/plugins/failure/meson.build
+++ b/src/plugins/failure/meson.build
@@ -1,4 +1,4 @@
-failure_include = include_directories('include')
+failure_include = include_directories(['include'])
 
 # TODO: target properties
 failure = shared_library('mavsdk_failure',
@@ -8,4 +8,13 @@ failure = shared_library('mavsdk_failure',
   install: true
 )
 
-install_headers('include/plugins/failure/failure.h')
+pkg.generate(
+  libraries: [failure],
+  subdirs: ['mavsdk/plugins/failure', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_failure',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/failure/failure.h',
+  subdir: 'mavsdk/plugins/failure')
