--- a/src/plugins/follow_me/meson.build
+++ b/src/plugins/follow_me/meson.build
@@ -1,4 +1,4 @@
-follow_me_include = include_directories('include')
+follow_me_include = include_directories(['include'])
 
 # TODO: target properties
 follow_me = shared_library('mavsdk_follow_me',
@@ -8,4 +8,13 @@ follow_me = shared_library('mavsdk_follow_me',
   install: true
 )
 
-install_headers('include/plugins/follow_me/follow_me.h')
+pkg.generate(
+  libraries: [follow_me],
+  subdirs: ['mavsdk/plugins/follow_me', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_follow_me',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/follow_me/follow_me.h',
+  subdir: 'mavsdk/plugins/follow_me')
