--- a/src/plugins/geofence/meson.build
+++ b/src/plugins/geofence/meson.build
@@ -1,4 +1,4 @@
-geofence_include = include_directories('include')
+geofence_include = include_directories(['include'])
 
 # TODO: target properties
 geofence = shared_library('mavsdk_geofence',
@@ -8,4 +8,13 @@ geofence = shared_library('mavsdk_geofence',
   install: true
 )
 
-install_headers('include/plugins/geofence/geofence.h')
+pkg.generate(
+  libraries: [geofence],
+  subdirs: ['mavsdk/plugins/geofence', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_geofence',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/geofence/geofence.h',
+  subdir: 'mavsdk/plugins/geofence')
