--- a/src/plugins/info/meson.build
+++ b/src/plugins/info/meson.build
@@ -1,4 +1,4 @@
-info_include = include_directories('include')
+info_include = include_directories(['include'])
 
 # TODO: target properties
 info = shared_library('mavsdk_info',
@@ -8,4 +8,13 @@ info = shared_library('mavsdk_info',
   install: true
 )
 
-install_headers('include/plugins/info/info.h')
+pkg.generate(
+  libraries: [info],
+  subdirs: ['mavsdk/plugins/info', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_info',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/info/info.h',
+  subdir: 'mavsdk/plugins/info')
