--- a/src/plugins/log_files/meson.build
+++ b/src/plugins/log_files/meson.build
@@ -1,4 +1,4 @@
-log_files_include = include_directories('include')
+log_files_include = include_directories(['include'])
 
 # TODO: target properties
 log_files = shared_library('mavsdk_log_files',
@@ -8,4 +8,13 @@ log_files = shared_library('mavsdk_log_files',
   install: true
 )
 
-install_headers('include/plugins/log_files/log_files.h')
+pkg.generate(
+  libraries: [log_files],
+  subdirs: ['mavsdk/plugins/log_files', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_log_files',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/log_files/log_files.h',
+  subdir: 'mavsdk/plugins/log_files')
