--- a/src/plugins/manual_control/meson.build
+++ b/src/plugins/manual_control/meson.build
@@ -1,4 +1,4 @@
-manual_control_include = include_directories('include')
+manual_control_include = include_directories(['include'])
 
 # TODO: target properties
 manual_control = shared_library('mavsdk_manual_control',
@@ -8,4 +8,13 @@ manual_control = shared_library('mavsdk_manual_control',
   install: true
 )
 
-install_headers('include/plugins/manual_control/manual_control.h')
+pkg.generate(
+  libraries: [manual_control],
+  subdirs: ['mavsdk/plugins/manual_control', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_manual_control',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/manual_control/manual_control.h',
+  subdir: 'mavsdk/plugins/manual_control')
