--- a/src/plugins/mavlink_passthrough/meson.build
+++ b/src/plugins/mavlink_passthrough/meson.build
@@ -1,4 +1,4 @@
-mavlink_passthrough_include = include_directories('include')
+mavlink_passthrough_include = include_directories(['include'])
 
 # TODO: target properties
 mavlink_passthrough = shared_library('mavsdk_mavlink_passthrough',
@@ -8,4 +8,13 @@ mavlink_passthrough = shared_library('mavsdk_mavlink_passthrough',
   install: true
 )
 
-install_headers('include/plugins/mavlink_passthrough/mavlink_passthrough.h')
+pkg.generate(
+  libraries: [mavlink_passthrough],
+  subdirs: ['mavsdk/plugins/mavlink_passthrough', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_mavlink_passthrough',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/mavlink_passthrough/mavlink_passthrough.h',
+  subdir: 'mavsdk/plugins/mavlink_passthrough')
