--- a/src/plugins/mission_raw/meson.build
+++ b/src/plugins/mission_raw/meson.build
@@ -1,4 +1,4 @@
-mission_raw_include = include_directories('include')
+mission_raw_include = include_directories(['include'])
 
 # TODO: target properties
 mission_raw = shared_library('mavsdk_mission_raw',
@@ -8,4 +8,13 @@ mission_raw = shared_library('mavsdk_mission_raw',
   install: true
 )
 
-install_headers('include/plugins/mission_raw/mission_raw.h')
+pkg.generate(
+  libraries: [mission_raw],
+  subdirs: ['mavsdk/plugins/mission_raw', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_mission_raw',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/mission_raw/mission_raw.h',
+  subdir: 'mavsdk/plugins/mission_raw')
