--- a/src/plugins/param/meson.build
+++ b/src/plugins/param/meson.build
@@ -1,4 +1,4 @@
-param_include = include_directories('include')
+param_include = include_directories(['include'])
 
 # TODO: target properties
 param = shared_library('mavsdk_param',
@@ -8,4 +8,13 @@ param = shared_library('mavsdk_param',
   install: true
 )
 
-install_headers('include/plugins/param/param.h')
+pkg.generate(
+  libraries: [param],
+  subdirs: ['mavsdk/plugins/param', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_param',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/param/param.h',
+  subdir: 'mavsdk/plugins/param')
