--- a/src/plugins/shell/meson.build
+++ b/src/plugins/shell/meson.build
@@ -1,4 +1,4 @@
-shell_include = include_directories('include')
+shell_include = include_directories(['include'])
 
 # TODO: target properties
 shell = shared_library('mavsdk_shell',
@@ -8,4 +8,13 @@ shell = shared_library('mavsdk_shell',
   install: true
 )
 
-install_headers('include/plugins/shell/shell.h')
+pkg.generate(
+  libraries: [shell],
+  subdirs: ['mavsdk/plugins/shell', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_shell',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/shell/shell.h',
+  subdir: 'mavsdk/plugins/shell')
