--- a/src/plugins/tune/meson.build
+++ b/src/plugins/tune/meson.build
@@ -1,4 +1,4 @@
-tune_include = include_directories('include')
+tune_include = include_directories(['include'])
 
 # TODO: target properties
 tune = shared_library('mavsdk_tune',
@@ -8,4 +8,13 @@ tune = shared_library('mavsdk_tune',
   install: true
 )
 
-install_headers('include/plugins/tune/tune.h')
+pkg.generate(
+  libraries: [tune],
+  subdirs: ['mavsdk/plugins/tune', 'mavsdk/'],
+  version: version_str,
+  name: 'mavsdk_tune',
+  description: 'API and library for MAVLink compatible systems written in C++11'
+)
+
+install_headers('include/plugins/tune/tune.h',
+  subdir: 'mavsdk/plugins/tune')
