--- a/src/backend/src/CMakeLists.txt
+++ b/src/backend/src/CMakeLists.txt
@@ -88,10 +88,12 @@ if(NOT IOS AND NOT ANDROID)
         mavsdk
     )
 
-    target_link_options(mavsdk_server_bin PRIVATE -static-libgcc -static-libstdc++ -static)
-    set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-    set_target_properties(mavsdk_server_bin PROPERTIES LINK_SEARCH_START_STATIC ON)
-    set_target_properties(mavsdk_server_bin PROPERTIES LINK_SEARCH_END_STATIC ON)
+    if (BUILD_STATIC_MAVSDK_SERVER)
+        target_link_options(mavsdk_server_bin PRIVATE -static-libgcc -static-libstdc++ -static)
+        set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+        set_target_properties(mavsdk_server_bin PROPERTIES LINK_SEARCH_START_STATIC ON)
+        set_target_properties(mavsdk_server_bin PROPERTIES LINK_SEARCH_END_STATIC ON)
+    endif()
 
     # MSVC fails to generate the `mavsdk_server` binary while having
     # a library called `mavsdk_server` as well. This means that with
