--- a/docker/Dockerfile-Ubuntu-20.04
+++ b/docker/Dockerfile-Ubuntu-20.04
@@ -36,9 +36,16 @@ RUN apt-get update \
         software-properties-common \
         sudo \
         wget \
+        python3 \
+        python3-pip \
+        python3-setuptools \
+        python3-wheel \
+        ninja-build \
     && apt-get -y autoremove \
     && apt-get clean autoclean \
     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+
+RUN pip3 install meson
 
 RUN gem install --no-document fpm;
 
