backend: link to protobuf for NON-SUPERBUILD

--- a/src/backend/CMakeLists.txt
+++ b/src/backend/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.1)
 
 find_package(OpenSSL REQUIRED)
 find_package(gRPC REQUIRED)
+if (NOT BUILD_SUPERBUILD)
+    find_package(Protobuf REQUIRED)
+endif()
 
 add_subdirectory(src)
 
