--- a/src/backend/test/CMakeLists.txt
+++ b/src/backend/test/CMakeLists.txt
@@ -37,7 +37,7 @@ target_link_libraries(unit_tests_backend
     mavsdk_offboard
     mavsdk_telemetry
     gRPC::grpc++
-    protobuf
+    ${PROTOBUF_LIBRARIES}
     gtest
     gmock
     gmock_main
