--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -370,6 +370,23 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
+  macOS-framework:
+    name: macOS-framework
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: configure
+        run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/release/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -DMACOS_FRAMEWORK=ON -DWERROR=OFF -j 2 -Bbuild/macos -H.
+      - name: build
+        run: cmake --build build/macos -j 2 --target install
+      - uses: actions/upload-artifact@v2
+        with:
+          name: mavsdk_server_macos.framework
+          path: ./build/macos/src/backend/src/mavsdk_server.framework
+          retention-days: 2
+
   iOS:
     name: iOS
     runs-on: macos-latest
@@ -406,7 +423,7 @@ jobs:
 
   iOS-XCFramework:
     name: iOS XCFramework
-    needs: [iOS, iOS-Simulator]
+    needs: [macOS-framework, iOS, iOS-Simulator]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -420,6 +437,10 @@ jobs:
         with:
           name: mavsdk_server_ios_simulator.framework
           path: ./build/ios_simulator/src/backend/src/mavsdk_server.framework
+      - uses: actions/download-artifact@v2
+        with:
+          name: mavsdk_server_macos.framework
+          path: ./build/macos/src/backend/src/mavsdk_server.framework
       - name: Package
         run: bash ./src/backend/tools/package_backend_framework.bash
       - uses: actions/upload-artifact@v2
